fix back button for help & easylang so its visible

--- a/metager/resources/less/metager/pages/help.less
+++ b/metager/resources/less/metager/pages/help.less
@@ -88,6 +88,7 @@
     border-width: 2px;
     border-style: solid;
     border-radius: 5px;
+    margin-left: -80px;
 }
 .help-back-button .back-arrow {
     width:10px ;
